k8s/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-ui
  namespace: msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-ui
  template:
    metadata:
      labels:
        app: customer-ui
    spec:
      containers:
      - name: customer-ui
        image: onkarlonkar9/frontend-customer:v2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: nginx-conf
        configMap:
          name: customer-ui-nginx-conf
