k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  namespace: msa
spec:
  selector:
    app: backend-api
  ports:
  - port: 8000
    targetPort: 8000
