k8s/customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-ui
  namespace: msa
spec:
  selector:
    app: customer-ui
  ports:
  - port: 80
    targetPort: 80
