k8s/customer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-ingress
  namespace: msa
spec:
  ingressClassName: traefik
  rules:
  - host: customer.localhost

    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: customer-ui
            port:
              number: 80
