k8s/vendor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vendor-ingress
  namespace: msa
spec:
  ingressClassName: traefik
  rules:
  - host: vendor.localhost

    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vendor-ui
            port:
              number: 80
